Front-end login, scan & userpage

--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/MainPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/MainPage.xaml
@@ -6,7 +6,7 @@
     <StackLayout>
         <Button Text="Scan Barcode"  
                 x:Name="btnCamera"  
-                Clicked="btnCamera_Clicked"/>
+                Clicked="btnCameraScan_Clicked"/>
         <Entry x:Name="eEAN" />
     </StackLayout>
 
