Added SignUp and SignIn plus navigation

--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/User/LoginPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/User/LoginPage.xaml
@@ -25,6 +25,11 @@
             <Button Command="{Binding SubmitCommand}" Text="Login" TextColor="White"  
                     FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
                     BackgroundColor="#088da5" />
+            <Label Text="Don't have account? Sign Up" TextColor="SkyBlue">
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding SignUpCommand}" />
+                </Label.GestureRecognizers>
+            </Label>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
