--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ListPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ListPage.xaml
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="VidyaBase.UI.Pages.Project.Vidya.AchievementsPage"
+             x:Class="VidyaBase.UI.Pages.Project.Vidya.ListPage"
              xmlns:pages="clr-namespace:VidyaBase.UI.Pages.Project.Vidya">
   <FlyoutPage.Flyout>
-    <pages:AchievementsPageFlyout x:Name="FlyoutPage" />
+    <pages:ListPageFlyout x:Name="FlyoutPage" />
   </FlyoutPage.Flyout>
   <FlyoutPage.Detail>
     <NavigationPage>
       <x:Arguments>
-        <pages:AchievementsPageDetail />
+        <pages:ListPageDetail />
       </x:Arguments>
     </NavigationPage>
   </FlyoutPage.Detail>
