--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ListPageDetail.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ListPageDetail.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="VidyaBase.UI.Pages.Project.Vidya.AchievementsPageDetail"
+             x:Class="VidyaBase.UI.Pages.Project.Vidya.ListPageDetail"
              Title="Detail">
   <StackLayout Padding="10">
     <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Flyout' page with an Icon that references it."/>
