--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ListPageFlyout.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ListPageFlyout.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="VidyaBase.UI.Pages.Project.Vidya.AchievementsPageFlyout"
+             x:Class="VidyaBase.UI.Pages.Project.Vidya.ListPageFlyout"
              Title="Flyout">
   <StackLayout>
     <ListView x:Name="MenuItemsListView"
