--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/User/ProfilePage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/User/ProfilePage.xaml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="VidyaBase.UI.Pages.Project.User.ProfilePage">
+             x:Class="VidyaBase.UI.Pages.Project.User.ProfilePage"
+             xmlns:viewmodels="clr-namespace:VidyaBase.UI.ViewModels" 
+             x:DataType="viewmodels:ProfileViewModel"
+             BackgroundImageSource="GeoLight.jpg">
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -17,15 +20,15 @@
 
 
     <ContentPage.Content>
-        <Grid BackgroundColor="White">
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <!-- 1. Profile picture-->
             <Image Grid.Row="0" Source="ProfilePic.jpg" VerticalOptions="Start" />
             <!-- 2. Profile information-->
-            <StackLayout Grid.Row="0" BackgroundColor="White" VerticalOptions="End">
-                <Frame CornerRadius="40" Style="{StaticResource Key=ProfileMainStyle}">
+            <StackLayout Grid.Row="0" VerticalOptions="End">
+                <Frame CornerRadius="40" Style="{StaticResource Key=ProfileMainStyle}" BackgroundColor="#ffc9d1" Opacity="0.8">
                     <Grid Padding="25,10,25,0" RowSpacing="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -38,22 +41,22 @@
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
-                        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="Stéphanie Bracke" FontAttributes="Bold" FontSize="30"/>
-                        <Label Grid.Row="1" Grid.Column="0" Text="Kortrijk" TextColor="#a5a2a2" FontSize="16"/>
+                        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding CurrentUser.FirstName}" FontAttributes="Bold" FontSize="30"/>
+                        <Label Grid.Row="1" Grid.Column="0" Text="{Binding CurrentUser.LastName}" FontSize="16"/>
                         <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Padding="0,10,0,0" FontSize="16">
                             <Label.FormattedText>
                                 <FormattedString>
                                     <Span Text="Email: " FontAttributes="Bold" />
-                                    <Span Text="KawaiiFromOuterSpace@hotmail.com"  />
+                                    <Span Text="{Binding CurrentUser.Email}"  />
                                 </FormattedString>
                             </Label.FormattedText>
                         </Label>
 
                         <!--4. User options: Scan & Lists-->
 
-                        <Button Command="{Binding ScanCommand}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" TextColor="White" BackgroundColor="#1E90FF" Text="Scan" Margin="-10,50,0,2" FontAttributes="Bold" FontSize="17" HeightRequest="45"/>
-                        <Button Command="{Binding ListCommand}" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="1" TextColor="White" BackgroundColor="#87CEFA" Text="Lists" Margin="-10,50,0,2" FontAttributes="Bold" FontSize="17" HeightRequest="45"/>
-                        <Button Command="{Binding EditCommand}" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="1" TextColor="White" BackgroundColor="#87CEFA" Text="Edit" Margin="-10,50,0,2" FontAttributes="Bold" FontSize="17" HeightRequest="45"/>
+                        <Button Command="{Binding ScanCommand}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" BackgroundColor="#1E90FF" Text="Scan" Margin="-10,50,0,2" FontAttributes="Bold" FontSize="17" HeightRequest="45"/>
+                        <Button Command="{Binding ListCommand}" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="1" BackgroundColor="#87CEFA" Text="Lists" Margin="-10,50,0,2" FontAttributes="Bold" FontSize="17" HeightRequest="45"/>
+                        <Button Command="{Binding EditCommand}" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="1" BackgroundColor="#87CEFA" Text="Edit" Margin="-10,50,0,2" FontAttributes="Bold" FontSize="17" HeightRequest="45"/>
                     </Grid>
                 </Frame>
             </StackLayout>
