--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
@@ -6,10 +6,11 @@
 
     <ContentPage.Content>
 
-        <StackLayout>
+        <StackLayout Orientation="Vertical" Padding="60" Spacing="20">
             <Button Text="Scan Barcode"  
                 x:Name="btnCamera"  
-                Clicked="btnCamera_Clicked"/>
+                Clicked="btnCamera_Clicked"
+                BackgroundColor="Violet"/>
             <Entry x:Name="eEAN" />
         </StackLayout>
 
