--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:VidyaBase.UI.ViewModels" x:DataType="viewmodels:ScanViewModel"
              x:Class="VidyaBase.UI.Pages.Project.Vidya.ScanPage"
              BackgroundImageSource="vrScan.jpg">
 
@@ -8,10 +8,11 @@
 
         <StackLayout Orientation="Vertical" Padding="60" Spacing="20">
             <Button Text="Scan Barcode"  
+                    Command="{Binding ScanEanCodeCommand}"
                 x:Name="btnCamera"  
-                Clicked="btnCamera_Clicked"
                 BackgroundColor="Violet"/>
-            <Entry x:Name="eEAN" />
+            <Entry Placeholder="EanCode" x:Name="eEAN" Text="{Binding ScannedEan}" />
+            <Entry Placeholder="Game Title" IsEnabled="False" Text="{Binding ScannedEan.name}"/>
         </StackLayout>
 
     </ContentPage.Content>
