--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
@@ -5,8 +5,8 @@
              BackgroundImageSource="vrScan.jpg">
 
     <ContentPage.Content>
-
-        <StackLayout Orientation="Vertical" Padding="60" Spacing="20">
+        <StackLayout>
+        <StackLayout Orientation="Vertical" Padding="60">
             <Button Text="Scan Barcode"  
                     Command="{Binding ScanEanCodeCommand}"
                 x:Name="btnCamera"  
@@ -14,7 +14,10 @@
             <Entry Placeholder="EanCode" x:Name="eEAN" Text="{Binding ScannedEan}" />
             <Entry Placeholder="Game Title" IsEnabled="False" Text="{Binding ScannedEan.name}"/>
         </StackLayout>
-
+            <StackLayout Orientation="Horizontal" Margin="40,0,0,0"  Spacing="30">
+                <Button Text="Add to collection" Command="{Binding CollectionGoCommand}" BackgroundColor="Violet"/>
+                <Button Text="Add to wishlist" Command="{Binding WishlistGoCommand}" BackgroundColor="Violet"/>
+        </StackLayout>
+        </StackLayout>
     </ContentPage.Content>
-
 </ContentPage>
