--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/CollectionPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/CollectionPage.xaml
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="VidyaBase.UI.Pages.Project.Vidya.CollectionPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels="clr-namespace:VidyaBase.UI.ViewModels" 
+             xmlns:helpermodels="clr-namespace:VidyaBase.UI.HelperModels"
+             x:Class="VidyaBase.UI.Pages.Project.Vidya.CollectionPage"
+             x:DataType="viewmodels:CollectionViewModel">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Collections"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ListView ItemsSource="{Binding Games}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="helpermodels:GameHelper">
+                    <TextCell Text="{Binding DisplayName}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
