--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/User/LoginPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/User/LoginPage.xaml
@@ -9,23 +9,23 @@
             <BoxView HeightRequest="10"/>
 
 
-            <Frame BackgroundColor="#BF043055" HasShadow="False">
+            <Frame BackgroundColor="{StaticResource Key=Login-background-color}" HasShadow="False">
                 <StackLayout Orientation="Vertical" Spacing="20">
                     <Entry x:Name="Email" Text="{Binding Email}" Placeholder="Email"   
-                           PlaceholderColor="White" HeightRequest="40"   
+                           PlaceholderColor="{StaticResource Key=Login-text-color}" HeightRequest="40"   
                            Keyboard="Email"  
-                           TextColor="White"/>
+                           TextColor="{StaticResource Key=Login-text-color}"/>
                     <Entry x:Name="Password" Text="{Binding Password}" Placeholder="Password"   
-                           PlaceholderColor="White" HeightRequest="40"   
+                           PlaceholderColor="{StaticResource Key=Login-text-color}" HeightRequest="40"   
                            IsPassword="True"  
-                           TextColor="White"/>
+                           TextColor="{StaticResource Key=Login-text-color}"/>
                 </StackLayout>
             </Frame>
             <Image HorizontalOptions="Center"  WidthRequest="300" Source="neonvr.jpg"/>
-            <Button Command="{Binding SubmitCommand}" Text="Login" TextColor="White"  
+            <Button Command="{Binding SubmitCommand}" Text="Login" TextColor="{StaticResource Key=Login-text-color}"  
                     FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
-                    BackgroundColor="#088da5" />
-            <Label Text="Don't have account? Sign Up" TextColor="SkyBlue">
+                    BackgroundColor="{StaticResource Key=Login-details-color}" />
+            <Label Text="Don't have account? Sign Up" TextColor="{StaticResource Key=Login-details-color}">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding SignUpCommand}" />
                 </Label.GestureRecognizers>
