--- a/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/AllGamesPage.xaml
+++ b/VidyaBase/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/AllGamesPage.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VidyaBase.UI.Pages.Project.Vidya.AllGamesPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to my testing page!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" >
+            <Label Text="The Copper Key awaits explorers"/>
+            <Label Text="In a tomb filled with horrors"/>
+            <Label Text="But you have much to learn"/>
+            <Label Text="If you hope to earn"/>
+            <Label Text="A place among the high scorers!"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
