--- a/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
+++ b/VidyaBase.UI/VidyaBase.UI/Pages/Project/Vidya/ScanPage.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:VidyaBase.UI.ViewModels" x:DataType="viewmodels:ScanViewModel"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels="clr-namespace:VidyaBase.UI.ViewModels" 
+             x:DataType="viewmodels:ScanViewModel"
              x:Class="VidyaBase.UI.Pages.Project.Vidya.ScanPage"
              BackgroundImageSource="vrScan.jpg">
 
